--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -7,78 +7,34 @@
     right:0;
     z-index: 100000;
 
-    
-
-    // &.open{
-
-
-    //     .header__menu{
-    //         >span:first-child{
-    //             transform: rotate(45deg);
-    //         }
-
-    //         >span:nth-child(2){
-    //             opacity: 0;
-    //         }
-
-    //         >span:last-child{
-    //             transform: rotate(-45deg);
-    //         }
-
-    //     }
-    // } 
-
 
     &__logo{
+        animation: nav 500ms  ease-in 2s;
+     
         img{
-            flex: 1;
-            width: 70%;
-            
-        }
-    }
-
-    &__links{
-        gap: rem(20);
-
-       
-        
-
-         a{
-            font-weight: 700;
-            
-
-
-            &:hover{
-                color: $clr-pry;
-            }
-            &:first-child{
-                animation: nav 1s ease-in;
-            }
-
-            &:nth-child(2){
-                animation: nav 1s ease-in 1s;
-            }
-            &:last-child{
-                animation: nav 1s ease-in 1.5s;
-
-            }
-
-
-
+            width: 70%;            
         }
 
-
-
-
     }
+
+ 
 
     &__cta{
         padding: rem(10) rem(30);
-        color: $clr-pry;        
+        color: $clr-pry;     
+        min-width: rem(150);   
         border-radius: rem(20);
         font-weight: 700;
         border: 2px solid $clr-pry;
-        animation: nav 1s ease-in 2s;
+        animation: nav 500ms 500ms ease-in 2s;
+        display: flex;
+        gap: rem(5);
+        justify-content: center;
+
+        @include breakpoint-down (small){
+            padding: rem(10) rem(15);
+            font-size: rem(12);
+        }
         
 
         &:hover{
@@ -89,28 +45,5 @@
 
     }
 
-    &__menu{
-
-        Span{
-            display: block;
-            width: rem(26);
-            height: rem(2);
-            background-color: white;
-            transition: all 300ms ease-in-out;
-            transform-origin: 3px 1px;
-
-            &:not(:last-child){
-                margin-bottom: rem(5) ;
-            }
-        }
-    }
 }
 
-// .sticky{
-//     position:fixed;
-//      padding: 1rem 1.5rem;
-//      transition: 100ms ease-in-out;
-
-//      box-shadow: 2px 0 10px #363a43;
-
-// }
